<resources>
    <string name="app_name">Techlab rental</string>
    <string name="password">Wachtwoord</string>
    <string name="register">Registreren</string>
    <string name="techlab_rental">TechLab Rental</string>
    <string name="username">Gebruikersnaam</string>
    <string name="create_an_account">Maak een nieuw account</string>
    <string name="usernametext">Gebruikersnaam:</string>
    <string name="e_mail_adres">E-mail adres:</string>
    <string name="passwordregistertextview">Wachtwoord:</string>
    <string name="repeat_password">Herhaal wachtwoord:</string>
    <string name="create_account_button">Maak aan</string>
    <string name="droneInPage">Drone</string>
    <string name="use_your_school_e_mail">* gebruik je schoolmail</string>
    <string name="contact">Contact</string>
    <string name="openingstijden">
        Openingstijden:"\n"
        Maandag CSAR: 10:30 - 17:00"\n"
        Dinsdag peercoaches: 10:30 - 15:50"\n"
        Woensdag peercoaches: 10:30 - 15:50"\n"
        Donderdag CSAR: 10:30 - 17:00"\n"
        Lokaal WD.04.022</string>

    <string name="contact_info"><![CDATA[Contact & Info]]></string>
    <string name="don_t_have_an_account">Nog geen account?</string>
    <string name="login">Log in</string>
    <string name="sign_up">Maak aan</string>
    <string name="homescreen">Home</string>
    <string name="drone_info">
        Uitleenperiode drone: maximaal 1 dag"\n"
        LET OP: IN ROTTERDAM GELDT EEN NO FLY ZONE!</string>
    <string name="aanmaken_account">Aanmaken account</string>
    <string name="inloggegevens">Hierbij een bevestiging van het aanmaken van je account. Je kunt nu met je inloggegevens inloggen.</string>
    <string name="vragen">Voor vragen of opmerkingen kan er een mail gestuurd worden naar: techlab@csarotterdam.nl</string>
    <string name="ingelogd_blijven">Ingelogd blijven?</string>
    <string name="voeg_product_toe">Voeg product toe</string>
    <string name="overige_producten">Overige\nproducten</string>
    <string-array name="categories">
        <item>Games</item>
        <item>Boeken</item>
        <item>Drones</item>
        <item>Virtual Reality</item>
        <item>Computer</item>
        <item>Overig</item>
    </string-array>


</resources>
